--- a/CredoLoan.Infrastructure/Resources/StringResources.resx
+++ b/CredoLoan.Infrastructure/Resources/StringResources.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ErrorCssFindPerson" xml:space="preserve">
+    <value>Error in Css Api to find person</value>
+  </data>
+  <data name="ErrorCssToken" xml:space="preserve">
+    <value>Error in Css Api to get token</value>
+  </data>
   <data name="InternalErrorOccured" xml:space="preserve">
     <value>Internal Error Occured</value>
   </data>
